relinked missing images

--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
     <section class="hp-project-section">
         <a class="hp-project">
             <div class="hp-project-spacer">
-                <img src="/images/personal/_B0A7939.jpg" alt="colorized image of andrew laying in grass">
+                <img src="images/personal/_B0A7939.jpg" alt="colorized image of andrew laying in grass">
                 <h2>personal work ➫</h2>
             </div>
         </a>
         <a class="hp-project">
             <div class="hp-project-spacer">
-                <img src="/images/professional/RADIANCE-5-min.jpg" alt="person in red jacket on red background">
+                <img src="images/professional/RADIANCE-5-min.jpg" alt="person in red jacket on red background">
                 <h2>professional work ➫</h2>
             </div>
         </a>
@@ -111,7 +111,7 @@
             <div>
                 <p>thanks for visiting.</p>
                 <p>warmly,</p>
-                <img src="/images/head-foot/au.png" alt="au">
+                <img src="images/head-foot/au.png" alt="au">
             </div>
         </section>
         <section class="copyright">
