image + link updates

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <!-- logo -->
         <div class="nav-left">
-            <a href="/index.html"><img src="images/head-foot/smiley-webcrop.png" alt="andrew uhrig smiley face"></a>
+            <a href="index.html"><img src="images/head-foot/smiley-webcrop.png" alt="andrew uhrig smiley face"></a>
         </div>
         <!-- mobile hamburger menu -->
         <div class="mobile-nav">
@@ -25,11 +25,11 @@
          <aside class="mobile-menu">
             <h4 id="work-mb-button">work</h4>
             <div class="work-mobile">
-                <a href="/personal.html"><h5>personal</h5></a>
-                <a href="/professional.html"><h5>professional</h5></a>
+                <a href="personal.html"><h5>personal</h5></a>
+                <a href="professional.html"><h5>professional</h5></a>
             </div>
-            <a href="/about.html"><h4>about</h4></a>
-            <a href="/contact.html"><h4>contact</h4></a>
+            <a href="about.html"><h4>about</h4></a>
+            <a href="contact.html"><h4>contact</h4></a>
             <a href="https://www.instagram.com/uhr.ig/" target="_blank" rel="noopener noreferrer">
                 <img id="ig-icon" src="images/head-foot/Instagram_Glyph_greenblue-01-01.png" alt="@uhr.ig on Instagram">
                 
@@ -40,12 +40,12 @@
             <div class="work-container">
                 <h4 id="work-dt-button">work</h4>
                 <div class="work-desktop">
-                    <a href="/personal.html"><h5>personal</h5></a>
-                    <a href="/professional.html"><h5>professional</h5></a>
+                    <a href="personal.html"><h5>personal</h5></a>
+                    <a href="professional.html"><h5>professional</h5></a>
                 </div>
             </div>
-            <a href="/about.html"><h4>about</h4></a>
-            <a href="/contact.html"><h4>contact</h4></a>
+            <a href="about.html"><h4>about</h4></a>
+            <a href="contact.html"><h4>contact</h4></a>
             <a href="https://www.instagram.com/uhr.ig/" target="_blank" rel="noopener noreferrer">
                 <img id="ig-icon" src="images/head-foot/Instagram_Glyph_greenblue-01-01.png" alt="@uhr.ig on Instagram">
             </a>
@@ -58,10 +58,10 @@
         </video>
         <div class="hero-text-container">
             <div class="hero-left">
-                <a href="/personal.html"><h5>personal</h5></a>
+                <a href="personal.html"><h5>personal</h5></a>
             </div>
             <div class="hero-right">
-                <a href="/professional.html"><h5>professional</h5></a>
+                <a href="professional.html"><h5>professional</h5></a>
             </div>
         </div>
     </section>
@@ -87,13 +87,13 @@
         </div>
     </section>
     <section class="hp-project-section">
-        <a class="hp-project">
+        <a href="personal.html" class="hp-project">
             <div class="hp-project-spacer">
-                <img src="images/personal/_B0A7939.jpg" alt="colorized image of andrew laying in grass">
+                <img src="images/personal/_B0A7939-min.jpg" alt="colorized image of andrew laying in grass">
                 <h2>personal work ➫</h2>
             </div>
         </a>
-        <a class="hp-project">
+        <a href="professional.html" class="hp-project">
             <div class="hp-project-spacer">
                 <img src="images/professional/RADIANCE-5-min.jpg" alt="person in red jacket on red background">
                 <h2>professional work ➫</h2>
@@ -103,10 +103,10 @@
     <footer>
         <section class="footer-grid">
             <div class="foot-col">
-                <a href="/personal.html">/personal</a>
-                <a href="/professional.html">/professional</a>
-                <a href="/about.html">/about</a>
-                <a href="/contact.html">/contact</a>
+                <a href="personal.html">/personal</a>
+                <a href="professional.html">/professional</a>
+                <a href="about.html">/about</a>
+                <a href="contact.html">/contact</a>
             </div>
             <div>
                 <p>thanks for visiting.</p>
