--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/jma1nsl.css">
     <title>andrew uhrig</title>
+    <link rel="icon" type="image/x-icon" href="images/head-foot/smiley-webcrop-min.png">
     <script src="app.js" defer></script>
 </head>
 <body>
@@ -53,7 +54,7 @@
     </nav>
 <!-- hero -->
     <section class="hp-hero-section">
-        <video autoplay muted loop id="hp-hero-video">
+        <video preload autoplay loop muted playsinline id="hp-hero-video">
             <source src="images/homepage/iforgotmypower-loop_2.mp4" type="video/mp4">
         </video>
         <div class="hero-text-container">
