--- a/personal.html
+++ b/personal.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="images/head-foot/smiley-webcrop-min.png">
     <script src="app.js" defer></script>
 </head>
-<body>
+<body class="white-background">
 
     <!-- NAV -->
 
@@ -63,6 +63,56 @@
             </a>
         </div>
     </nav>
+
+<!-- HERO -->
+
+<section class="work-hero-container">
+    <img class="work-hero-img" src="images/personal/-B0A7939-min.jpg" alt="colorized image of andrew laying in grass">
+    <div class="work-hero-text">
+        <h2>personal / select works</h2>
+        <p>here is a collection of work i've created over the past decade. i have never tried to contain, bind, corner, or limit myself to a singular way of creating work. i've pulled together this collection because i like to think it represents that lack of constraint, and i hope it shows a few different parts of my being. i would like to add more, but i made this website for a web development class and could not commit more time to do so. i should note that i include any form of time limitation in my definition of "a singular way of creating work."</p>
+    </div>
+</section>
+
+<!-- IMAGE GRID -->
+
+<section class="work-img-grid">
+    <img src="images/personal/-B0A0784-min.jpg" alt="sad clown">
+    <img src="images/personal/-B0A1260-edit-2.jpg" alt="fashion??? clown">
+    <img src="images/personal/-B0A2090-min.jpg" alt="fake deep clown">
+    <img src="images/personal/-B0A7939-min.jpg" alt="tired grass clown">
+    <img src="images/personal/-B0A8447-min.jpg" alt="tree clown">
+    <img src="images/personal/3-2019-min.jpg" alt="syd in blue">
+    <img src="images/personal/4-2017-min.jpg" alt="triple bald clown">
+    <img src="images/personal/25-2019-min.jpg" alt="red canvas">
+    <img src="images/personal/ANOTHER-WORLD-min.gif" alt="another world is possible. another earth is not.">
+    <img src="images/personal/book-print-7-min.jpg" alt="i hate desirability">
+    <img src="images/personal/FAWAZ-5-min.jpg" alt="contact sheet with maybe 1 and a half good shots">
+    <img src="images/personal/SCAN-12-web-min.jpg" alt="hand shadow on brick wall">
+    <img src="images/personal/SCAN-14-web-min.jpg" alt="this is perhaps one of the saddest images i have ever made">
+    <img src="images/personal/sleep-min.png" alt="this was just for fun">
+</section>
+
+<!-- FOOTER -->
+
+<footer class="blue-footer">
+    <section class="footer-flex">
+        <div>
+            <p>thanks for visiting.</p>
+            <p>warmly,</p>
+            <img src="images/head-foot/au.png" alt="au">
+        </div>
+        <div class="foot-col">
+            <a id="link-3" href="personal.html">/personal</a>
+            <a id="link-3" href="professional.html">/professional</a>
+            <a id="link-3" href="about.html">/about</a>
+            <a id="link-3" href="contact.html">/contact</a>
+        </div>
+    </section>
+    <section class="copyright">
+        <p>© andrew uhrig. All rights reserved.</p>
+    </section>
+</footer>
 
 </body>
 </html>
