--- a/personal.html
+++ b/personal.html
@@ -8,6 +8,7 @@
     <title>andrew uhrig</title>
     <link rel="icon" type="image/x-icon" href="images/head-foot/smiley-webcrop-min.png">
     <script src="app.js" defer></script>
+    <script src="work.js" defer></script>
 </head>
 <body class="white-background">
 
@@ -91,6 +92,15 @@
     <img src="images/personal/SCAN-12-web-min.jpg" alt="hand shadow on brick wall">
     <img src="images/personal/SCAN-14-web-min.jpg" alt="this is perhaps one of the saddest images i have ever made">
     <img src="images/personal/sleep-min.png" alt="this was just for fun">
+</section>
+
+<!-- MODAL LIGHTBOX -->
+
+<section class="lightbox-container">
+    <div class="lightbox-slide">
+        <img class="featured-image" src="" alt="">
+    </div>
+    <span class="close-button">&#215;</span>
 </section>
 
 <!-- FOOTER -->
