--- a/professional.html
+++ b/professional.html
@@ -8,6 +8,7 @@
     <title>andrew uhrig</title>
     <link rel="icon" type="image/x-icon" href="images/head-foot/smiley-webcrop-min.png">
     <script src="app.js" defer></script>
+    <script src="work.js" defer></script>
 </head>
 <body class="white-background">
 
@@ -86,6 +87,15 @@
     <img src="images/professional/_B0A2999-min.png" alt="fictional reality--book by Elizabeth Meade. design by me.">
     <img src="images/professional/0B0A9790-min.jpg" alt="Carlyn">
     <img src="images/professional/Andris12-min.jpg" alt="Andris">
+</section>
+
+<!-- MODAL LIGHTBOX -->
+
+<section class="lightbox-container">
+    <div class="lightbox-slide">
+        <img class="featured-image" src="" alt="">
+    </div>
+    <span class="close-button">&#215;</span>
 </section>
 
 <!-- FOOTER -->
