updated image on professional page

--- a/professional.html
+++ b/professional.html
@@ -84,7 +84,7 @@
     <img src="images/professional/SHRED-1-min.jpg" alt="shred">
     <img src="images/professional/Skin-4-min.jpg" alt="person with makeup on blue background">
     <img src="images/professional/WOMEN-5-min.jpg" alt="women in warm palette">
-    <img src="images/professional/_B0A2999-min.png" alt="fictional reality--book by Elizabeth Meade. design by me.">
+    <img src="images/professional/_B0A2999-min.jpg" alt="fictional reality--book by Elizabeth Meade. design by me.">
     <img src="images/professional/0B0A9790-min.jpg" alt="Carlyn">
     <img src="images/professional/Andris12-min.jpg" alt="Andris">
 </section>
